<resources>
    <string name="app_name">LoginTest</string>
    <string name="Open">open</string>
    <string name="Close">close</string>


    <!-- SplashActivity -->
    <string name="splash_title">암기용</string>

    <!-- registerActivity -->
    <string name="register_title">개인회원 가입</string>
    <string name="register_customer">계정이 없으세요? 회원가입하기</string>
    <string name="register_customer_two">이미 계정이 있으세요? 로그인하기</string>
    <string name="register_sign_up_complete">회원가입에 성공하셨습니다.</string>
    <string name="register_name_hint">이름</string>
    <string name="register_id_hint">아이디</string>
    <string name="register_pwd_hint">비밀번호</string>
    <string name="register_pwd_confirm_hint">비밀번호 확인</string>
    <string name="register_next_hint">다음</string>
    <string name="register_sign_up_hint">회원가입</string>
    <string name="register_birth_title">생년월일</string>

    <string name="wordDetail_share">공유하기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dragon_detail">DragonDetailActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="revive_subText">20000코인으로 부활하시겠습니까?</string>
    <string name="dragon_tab_title">DRAGON</string>
    <string name="background_tab_title">BACKGROUND</string>
    <string name="nav_left_dragonList_title">자신의 용 목록</string>
    <string name="nav_left_itemList_title">아이템 목록</string>
    <string name="nav_left_shop_title">상점</string>
    <string name="revive_mainText">용이 죽었습니다!</string>
    <string name="title_activity_word_card02">WordCardActivity02</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_word_card03">WordCardActivity03</string>

    <string name="word_card_title">낱말카드</string>
    <string name="word_card_know">알아요!</string>
    <string name="answer_button">정답확인</string>

    <string name="study_finish_title">주관식을 모두 공부했어요.</string>
    <string name="study_finish_restart_button">재시작</string>
    <string name="study_finish_end_button">끝내기</string>


</resources>