<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />
    <ImageView
        android:id="@+id/authImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/auth_step_one"
        />

   <!-- <TextView
        android:id="@+id/authTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="인증 단계" />-->

    <EditText
        android:text="하나나나"
        android:id="@+id/ac_register_userName_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/register_name_hint" />

    <EditText
        android:text="11111211"
        android:id="@+id/ac_register_userId_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/register_id_hint" />

    <EditText
        android:text="111111!a"
        android:id="@+id/ac_register_userPwd_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_pwd_hint"
        android:inputType="textPassword" />

    <EditText
        android:text="111111!a"
        android:id="@+id/ac_register_userPwd_Confirm_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_pwd_confirm_hint"
        android:inputType="textPassword" />

    <RelativeLayout
        android:id="@+id/ac_register_next_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/ac_register_next_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="20dp"
            android:outlineAmbientShadowColor="#000000"
            android:textColor="#000000"
            android:text="@string/register_next_hint"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/loginTextView"/>

<!--        <Button
            android:id="@+id/ac_register_next_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_next_hint"
            android:layout_above="@+id/loginTextView" />-->

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_customer_two"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</LinearLayout>