<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudyFinishFragment">

    <LinearLayout
        android:id="@+id/fragment_study_finish_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/custom_input"
        >

        <TextView
            android:id="@+id/fragment_study_finish_title"
            android:text="@string/study_finish_title"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <Button
            android:id="@+id/fragment_study_finish_restart_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study_finish_restart_button"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/fragment_study_finish_end_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/study_finish_end_button"/>

    </LinearLayout>

</FrameLayout>